--- a/src/main/webapp/CSS/registro_pacientes.css
+++ b/src/main/webapp/CSS/registro_pacientes.css
@@ -1,4 +1,17 @@
 
+/* 
+    Created on : 14/11/2022, 11:19:07 p. m.
+    Author     : duber
+*/
+
+*{
+    margin: 0px;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
+
+   
+}
 
 body{
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
@@ -15,13 +28,13 @@ body{
 
 
 header nav{
-    height: 100px;
+    height: 90px;
     background: rgb(250, 248, 248, 0.8);
-    padding: 0 30px;
+    padding: 20px;
     color: black;
     display: flex;
     justify-content: space-between;
-    align-items: center;  
+    align-items: center; 
     
 }
 
@@ -81,16 +94,34 @@ div img{
   
 .container{
     width: 100%;
-    max-width: 650px;
+    max-width: 850px;
     background:rgb(250, 248, 248, 0.8);
-    padding: 28px;
-    margin: 40px auto;
+    padding: 20px;
+    margin: 5px auto;
     border-radius: 10px;
     box-shadow: inset -2px 2px 2px rgb(221, 12, 165);
     justify-content: center;
     cursor: pointer;
-    
+   
+   
 }
+
+.error{
+    background-color: rgb(185, 0, 0);
+    text-align: center;
+    padding: 1rem;
+    color: white;
+    text-transform: uppercase;
+}
+
+.correcto{
+    background-color: rgb(12, 218, 12);
+    text-align: center;
+    padding: 1rem;
+    color: white;
+    text-transform: uppercase;
+}
+
 
 .form-title{
     font-size: 26px;
@@ -176,32 +207,62 @@ div footer{
    
 }
 
-/*respossive*/
-
-@media(max-width: 600px){
-    .container{
-        min-width: 280px;
-    }
-
-    .user-input-box{
-        margin-bottom: 12px;
-        width: 100%;
-    }
-
-    .user-input-box:nth-child(2n){
-        justify-content: space-between;
-    }
-
+.login{
     
+    text-align: right;
+    color: rgb(221, 12, 165);
+    padding: 10px;
+}
 
-    .main-user-info{
-        max-height: 380px;
-        overflow: auto;
+ /*responsive*/
+
+@media (max-width: 768px){
+    
+    /* header*/ 
+    .mostrar-menu,
+    .esconder-menu{
+        display: block;
     }
 
-    .main-user-info::-webkit-scrollbar{
-        width: 0;
+    .menu{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #4d4d5c;
+        right: -100%;
+        top: 0;
+        text-align: center;
+        padding: 100px 0px;
+        z-index: 100;
+        transition: 0.8s;
+    }
 
+    .menu a {
+        display: block;
+        padding: 20px;
+
+    }
+
+    .esconder-menu{
+        position: absolute;
+        top: 40px;
+        right: 40px;
+    }
+
+    #check:checked ~ .menu{
+        right: 0;
+    }
+
+    .main{
+        flex-direction: column;
+    }
+
+    div .contenedor{
+        flex-direction: column;
+    }
+
+    .form{
+        flex-direction: column;
     }
 }
 
